--- a/src/styles/bootstrap/_core.scss
+++ b/src/styles/bootstrap/_core.scss
@@ -1,19 +1,21 @@
 @import 'bootstrap/scss/functions';
 @import 'bootstrap/scss/variables';
+@import "bootstrap/scss/maps";
+@import 'bootstrap/scss/mixins';
 
-$theme-colors: (
-  "primary": $primary
-);
+$starorange: #df711b;
 
 $custom-theme-colors: (
-  'secondary': $secondary,
-  'gray-400': $gray-400,
-  'gray-600': $gray-600,
-  'sh-purple': $sh-purple,
-  'pink-light': $pink-light
+  "starorange": $starorange
 );
 
 $theme-colors: map-merge($theme-colors, $custom-theme-colors);
+$theme-colors-rgb: map-loop($theme-colors, to-rgb, "$value");
+$utilities-colors: map-merge($utilities-colors, $theme-colors-rgb);
+$utilities-text-colors: map-loop($utilities-colors, rgba-css-var, "$key", "text");
+$utilities-bg-colors: map-loop($utilities-colors, rgba-css-var, "$key", "bg");
 
-@import "bootstrap/scss/maps";
-@import 'bootstrap/scss/mixins';
+@import "bootstrap";
+
+
+
