--- a/src/styles/bootstrap/_core.scss
+++ b/src/styles/bootstrap/_core.scss
@@ -3,17 +3,7 @@
 @import "bootstrap/scss/maps";
 @import 'bootstrap/scss/mixins';
 
-$starorange: #df711b;
-
-$custom-theme-colors: (
-  "starorange": $starorange
-);
-
-$theme-colors: map-merge($theme-colors, $custom-theme-colors);
-$theme-colors-rgb: map-loop($theme-colors, to-rgb, "$value");
-$utilities-colors: map-merge($utilities-colors, $theme-colors-rgb);
-$utilities-text-colors: map-loop($utilities-colors, rgba-css-var, "$key", "text");
-$utilities-bg-colors: map-loop($utilities-colors, rgba-css-var, "$key", "bg");
+@import '../core/vars';
 
 @import "bootstrap";
 
