--- a/src/styles/core/_vars.scss
+++ b/src/styles/core/_vars.scss
@@ -269,3 +269,9 @@ $popover-body-color: #fff;
 
 // Table
 $table-border-color: $gray-500;
+
+$accordion-button-icon:         url("data:image/svg+xml,<svg role='presentation' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 22.6 22.6' class='svg font-size-xs chevron-down'><path d='M1.9 5.4l9.4 9.4 9.4-9.4 1.9 1.9-11.3 11.3L0 7.3l1.9-1.9z'></path></svg>");
+$accordion-button-active-icon:  url("data:image/svg+xml,<svg role='presentation' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 22.6 22.6' class='svg font-size-xs chevron-down'><path d='M1.9 5.4l9.4 9.4 9.4-9.4 1.9 1.9-11.3 11.3L0 7.3l1.9-1.9z'></path></svg>");
+$accordion-button-active-bg:  #fff;
+$accordion-button-active-color: $body-color;
+$accordion-border-radius: 0;
