--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -5,3 +5,5 @@
 
 @import 'components/announcement-bar.scss';
 @import 'components/badge.scss';
+@import 'components/breadcrumb.scss';
+@import 'components/carousel-indicators.scss';
