cookie banner & announcement

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,3 +4,6 @@
 @import 'common';
 
 @import 'components/accordion.scss';
+@import 'components/cookie-banner.scss';
+@import 'components/announcement-bar.scss';
+@import 'components/custom-forms.scss';
