--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -7,6 +7,8 @@
 @import 'components/swatch.scss';
 @import 'components/forms.scss';
 @import 'components/hr.scss';
+@import 'components/nav.scss';
+@import 'components/tabs.scss';
 @import 'components/custom-forms.scss';
 @import 'components/announcement-bar.scss';
 @import 'components/badge.scss';
