--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -14,3 +14,4 @@
 @import 'components/badge.scss';
 @import 'components/breadcrumb.scss';
 @import 'components/carousel-indicators.scss';
+@import 'components/tooltip.scss';
