video loop and tooltip

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,3 +7,5 @@
 @import 'components/cookie-banner.scss';
 @import 'components/announcement-bar.scss';
 @import 'components/dropdown.scss';
+@import 'components/video-loop.scss';
+@import 'components/video-loop-gif.scss';
