add video cards

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,3 +9,4 @@
 @import 'components/dropdown.scss';
 @import 'components/video-loop.scss';
 @import 'components/video-loop-gif.scss';
+@import 'components/video-card.scss';
