--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -13,4 +13,7 @@
 @import 'components/announcement-bar.scss';
 @import 'components/badge.scss';
 @import 'components/breadcrumb.scss';
+@import 'components/carousel.scss';
 @import 'components/carousel-indicators.scss';
+@import 'components/product-image-carousel.scss';
+@import 'components/product-card.scss';
