pdp indicator carousel

--- a/src/styles/components/_product-image-carousel.scss
+++ b/src/styles/components/_product-image-carousel.scss
@@ -1,4 +1,8 @@
 .product-image-carousel {
+	&__container {
+		position: relative;
+	}
+
 	@include media-breakpoint-up(lg) {
 		&__container, &__indicator {
 			position: sticky;
