--- a/src/styles/bootstrap/_main.scss
+++ b/src/styles/bootstrap/_main.scss
@@ -6,7 +6,6 @@
 // @import "bootstrap/scss/type";
 @import "bootstrap/scss/images";
 // @import "bootstrap/scss/code"; // unused
-// @import "bootstrap/scss/grid";
 @import "bootstrap/scss/tables";
 // @import "bootstrap/scss/forms";
 // @import "bootstrap/scss/buttons";
@@ -32,6 +31,7 @@
 // @import "bootstrap/scss/tooltip";
 @import "bootstrap/scss/popover";
 @import "bootstrap/scss/carousel";
+@import "bootstrap/scss/grid";
 // @import "bootstrap/scss/spinners";
 // @import "bootstrap/scss/utilities;
 // @import "bootstrap/scss/utilities/borders";
