--- a/src/styles/core/_vars.scss
+++ b/src/styles/core/_vars.scss
@@ -188,6 +188,8 @@ $breadcrumb-divider: quote(">");
 $breadcrumb-item-padding: calc-em(5);
 $breadcrumb-font-size: calc-em(12);
 $breadcrumb-padding-x: 0;
+$breadcrumb-padding-y: .75rem;
+$breadcrumb-item-padding-x: calc-em(5);
 
 // Social Icon
 $icon-primary-font-size: calc-em(30);
