--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,3 +10,6 @@
 @import 'components/video-loop.scss';
 @import 'components/video-loop-gif.scss';
 @import 'components/video-card.scss';
+
+@import 'compounds/birthday-popup.scss';
+@import 'compounds/exit-intent.scss';
