update buttons and accordion

--- a/src/styles/components/_accordion.scss
+++ b/src/styles/components/_accordion.scss
@@ -3,8 +3,10 @@
     border-left: none;
 }
 
-.accordion-button {
-    &:focus, &:active {
+.accordion-button:not(.collapsed) {
+    &:focus,
+    &:active {
         box-shadow: none;
+        border-bottom: $accordion-border-width solid $border-color;
     }
 }
