--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -18,3 +18,5 @@
 @import 'components/product-image-carousel.scss';
 @import 'components/product-card.scss';
 @import 'components/tooltip.scss';
+
+@import 'sections/header';
