--- a/src/styles/components/_svgs.scss
+++ b/src/styles/components/_svgs.scss
@@ -1,6 +1,8 @@
 .svg {
 	height: $font-size-base;
-	path {
-		fill: currentColor;
+	&--current-color {
+		path {
+			fill: currentColor;
+		}
 	}
 }
