--- a/src/styles/components/_forms.scss
+++ b/src/styles/components/_forms.scss
@@ -19,8 +19,14 @@
 }
 
 .form-group {
-	@include media-breakpoint-down(md) {
-		margin-bottom: $spacer * 0.5;
+	margin-bottom: $spacer * 0.5;
+
+	@include media-breakpoint-up(lg) {
+		margin-bottom: $spacer * 1;
+	}
+
+	.form-control {
+		margin-bottom: 0;
 	}
 }
 
