updates on accordion

--- a/src/styles/components/_accordion.scss
+++ b/src/styles/components/_accordion.scss
@@ -7,6 +7,6 @@
     &:focus,
     &:active {
         box-shadow: none;
-        border-bottom: $accordion-border-width solid $border-color;
+        border-bottom: $accordion-border-width solid $accordion-border-color;
     }
 }
