--- a/src/styles/core/_utilities.scss
+++ b/src/styles/core/_utilities.scss
@@ -3,6 +3,10 @@
 	border-color: $primary-light-second !important;
 }
 
+.border-gray-500 {
+	border-color: $gray-500 !important;
+}
+
 // Sticky sidebar at bottom
 .sticky-bottom {
 	top: auto;
