--- a/src/styles/core/_vars.scss
+++ b/src/styles/core/_vars.scss
@@ -292,6 +292,7 @@ $accordion-button-active-icon:  url("data:image/svg+xml,<svg role='presentation'
 $accordion-button-active-bg:  #fff;
 $accordion-button-active-color: $body-color;
 $accordion-border-radius: 0;
+$accordion-border-color: $gray-500;
 $accordion-button-focus-box-shadow: $accordion-border-color;
 $accordion-button-focus-border-color: $accordion-border-color;
 $accordion-button-padding-x: 0;
