Task/compounds-860ptyvby

--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -3,18 +3,18 @@
 @import 'core/grid';
 @import 'core/utilities';
 
-@import 'components/svgs.scss';
-@import 'components/swatch.scss';
-@import 'components/forms.scss';
-@import 'components/hr.scss';
-@import 'components/nav.scss';
-@import 'components/tabs.scss';
-@import 'components/custom-forms.scss';
-@import 'components/announcement-bar.scss';
-@import 'components/badge.scss';
-@import 'components/breadcrumb.scss';
-@import 'components/carousel.scss';
-@import 'components/carousel-indicators.scss';
-@import 'components/product-image-carousel.scss';
-@import 'components/product-card.scss';
-@import 'components/tooltip.scss';
+@import 'components/svgs';
+@import 'components/swatch';
+@import 'components/forms';
+@import 'components/hr';
+@import 'components/nav';
+@import 'components/tabs';
+@import 'components/custom-forms';
+@import 'components/announcement-bar';
+@import 'components/badge';
+@import 'components/breadcrumb';
+@import 'components/carousel';
+@import 'components/carousel-indicators';
+@import 'components/product-image-carousel';
+@import 'components/product-card';
+@import 'components/tooltip';
