--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,13 +3,17 @@
 @import 'bootstrap/main';
 @import 'common';
 
-@import 'components/accordion.scss';
-@import 'components/cookie-banner.scss';
-@import 'components/announcement-bar.scss';
-@import 'components/dropdown.scss';
-@import 'components/video-loop.scss';
-@import 'components/video-loop-gif.scss';
-@import 'components/video-card.scss';
+@import 'components/accordion';
+@import 'components/cookie-banner';
+@import 'components/announcement-bar';
+@import 'components/dropdown';
+@import 'components/video-loop';
+@import 'components/video-loop-gif';
+@import 'components/video-card';
 
 @import 'compounds/post-card';
 @import 'compounds/image-with-text';
+@import 'compounds/product-banner';
+@import 'compounds/product-variant';
+@import 'compounds/result-card';
+@import 'compounds/upsell';
