Task/860ptyvby Compounds

--- a/src/styles/compounds/_product-card.scss
+++ b/src/styles/compounds/_product-card.scss
@@ -60,6 +60,10 @@
 		}
 	}
 
+	svg {
+		fill: rgba(var(--bs-primary-rgb), var(--bs-text-opacity)) !important;
+	}
+
 	&--quiz {
 		@include media-breakpoint-down(sm) {
 			max-height: calc-em(150);
