--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,7 +13,13 @@
 
 @import 'compounds/post-card';
 @import 'compounds/image-with-text';
+@import 'compounds/product-waitlist';
 @import 'compounds/product-banner';
 @import 'compounds/product-variant';
+@import 'compounds/product-card';
 @import 'compounds/result-card';
 @import 'compounds/upsell';
+@import 'compounds/birthday-popup';
+@import 'compounds/exit-intent';
+@import 'compounds/newsletter-popup';
+@import 'compounds/sweepstakes-popup';
