Task/865bt14xk The heading texts should be aligned in center

--- a/src/styles/compounds/_sweepstakes-popup.scss
+++ b/src/styles/compounds/_sweepstakes-popup.scss
@@ -46,6 +46,14 @@
 		}
 	}
 
+	&__heading {
+		justify-content: center;
+
+		@include media-breakpoint-up(lg) {
+			justify-content: end;
+		}
+	}
+
 	&__close {
 		top: $grid-gutter-width;
 		right: $grid-gutter-width;
