--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -23,3 +23,4 @@
 @import 'compounds/exit-intent';
 @import 'compounds/newsletter-popup';
 @import 'compounds/sweepstakes-popup';
+@import 'compounds/cookies-popup';
