--- a/src/styles/core/_utilities.scss
+++ b/src/styles/core/_utilities.scss
@@ -108,6 +108,10 @@
 	margin-bottom: $spacer * 0.25 !important;
 }
 
+.mt-5 {
+	margin-top: $spacer * 3 !important;
+}
+
 // Cursor utilites
 .cursor-default {
 	cursor: default !important;
