--- a/src/styles/bootstrap/_core.scss
+++ b/src/styles/bootstrap/_core.scss
@@ -1,21 +1,17 @@
+@import "bootstrap/scss/mixins/banner";
+@include bsBanner("");
 @import 'bootstrap/scss/functions';
 @import 'bootstrap/scss/variables';
+
 @import "bootstrap/scss/maps";
 @import 'bootstrap/scss/mixins';
 
-@import '../core/vars';
-
-@import "bootstrap/scss/mixins/banner";
-@include bsBanner("");
-
+@import '../core/colors-vars';
 
 // scss-docs-start import-stack
 // Configuration
-@import "bootstrap/scss/functions";
-@import "bootstrap/scss/variables";
-@import "bootstrap/scss/maps";
-@import "bootstrap/scss/mixins";
 @import "bootstrap/scss/utilities";
+@import '../core/vars';
 
 // Layout & components
 @import "bootstrap/scss/root";
@@ -53,4 +49,7 @@
 // Helpers
 @import "bootstrap/scss/helpers";
 
+// Utilities
+@import "bootstrap/scss/utilities/api";
+// scss-docs-end import-stack
 
