--- a/src/styles/compounds/_product-banner.scss
+++ b/src/styles/compounds/_product-banner.scss
@@ -15,8 +15,8 @@ $grid-column-width-xl: minmax(0, (map-get($container-max-widths, xl) - $grid-gut
 
 .product-banner {
 	&__text {
-		padding-left: $grid-gutter-width;
-		padding-right: $grid-gutter-width;
+		padding-left: $grid-gutter-width !important;
+		padding-right: $grid-gutter-width !important;
 		@include media-breakpoint-up(lg) {
 			display: grid;
 			grid-template-columns: 1fr repeat(6, [col-start] $grid-column-width-lg);
