--- a/src/styles/core/_vars.scss
+++ b/src/styles/core/_vars.scss
@@ -28,6 +28,7 @@ $spacers: (
   2: $spacer * 1,     // 20
   3: $spacer * 1.5,   // 30
   4: $spacer * 2,     // 40
+  5: $spacer * 3,     // 60
   g: $grid-gutter-width,
 );
 
