--- a/src/styles/components/_custom-forms.scss
+++ b/src/styles/components/_custom-forms.scss
@@ -128,6 +128,9 @@
     border: 1px solid $gray-400;
     border-radius: 0.25rem;
     background-color: $gray-400;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    text-indent: 1px;
 
     &.disabled {
       color: $gray-400;
