--- a/src/styles/core/_vars.scss
+++ b/src/styles/core/_vars.scss
@@ -2,6 +2,7 @@
 $grid-gutter-width: 15px;
 $grid-gutter-width-lg: 30px;
 $container-padding-x: $grid-gutter-width;
+$headings-margin-bottom: 0.625rem;
 
 $aspect-ratios: (
   "6x7": calc(6 / 7 * 100%)
