--- a/src/styles/core/_vars.scss
+++ b/src/styles/core/_vars.scss
@@ -25,6 +25,7 @@ $container-max-widths: (
 
 $spacer: calc-em(20, $unit: 1rem);
 $spacers: (
+  0: 0,
   1: $spacer * 0.5,   // 10
   2: $spacer * 1,     // 20
   3: $spacer * 1.5,   // 30
