updates nav mega menu

--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -17,3 +17,4 @@
 @import 'components/carousel-indicators';
 @import 'components/product-image-carousel';
 @import 'components/tooltip';
+@import 'compounds/nav-mega-menu';
