--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -18,3 +18,5 @@
 @import 'components/product-image-carousel';
 @import 'components/tooltip';
 @import 'compounds/nav-mega-menu';
+
+@import 'sections/header';
