--- a/src/styles/core/_colors-vars.scss
+++ b/src/styles/core/_colors-vars.scss
@@ -2,6 +2,7 @@ $primary: #D62E55;
 $primary-light: #F5DADF;
 $primary-light-second: #FAE6EA;
 $primary-dark: #B22D4B;
+$white: #fff;
 $secondary: #00635B;
 $secondary-light: #E0F0E9;
 $sh-purple: #993366;
@@ -35,6 +36,7 @@ $custom-theme-colors: (
   'pink-light': $pink-light,
   'primary-light': $primary-light,
   'bali-bod-blue': $bali-bod-blue,
+  'color': $white
 );
 
 $theme-colors: map-merge($theme-colors, $custom-theme-colors);
