--- a/src/styles/core/_utilities.scss
+++ b/src/styles/core/_utilities.scss
@@ -81,10 +81,10 @@
 }
 
 // Special padding for text spacing
-.pr-25, .px-25 {
+.pe-25, .px-25 {
 	padding-right: $spacer * 0.25 !important;
 }
-.pl-25, .px-25 {
+.ps-25, .px-25 {
 	padding-left: $spacer * 0.25 !important;
 }
 .pt-25, .py-25 {
@@ -95,10 +95,10 @@
 }
 
 // Special margin for text spacing
-.mr-25, .mx-25 {
+.me-25, .mx-25 {
 	margin-right: $spacer * 0.25 !important;
 }
-.ml-25, .mx-25 {
+.ms-25, .mx-25 {
 	margin-left: $spacer * 0.25 !important;
 }
 .mt-25, .my-25 {
