--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -18,5 +18,6 @@
 @import 'components/product-image-carousel';
 @import 'components/tooltip';
 @import 'compounds/nav-mega-menu';
+@import 'compounds/search-box';
 
 @import 'sections/header';
