section product carousel

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -24,3 +24,5 @@
 @import 'compounds/newsletter-popup';
 @import 'compounds/sweepstakes-popup';
 @import 'compounds/cookies-popup';
+
+@import 'templates/blog';
