--- a/src/styles/core/_type.scss
+++ b/src/styles/core/_type.scss
@@ -23,9 +23,9 @@
 }
 
 .link-secondary {
-	color: $body-color;
+	color: $body-color !important;
 	&:hover {
-		color: $primary;
+		color: $primary !important;
 	}
 }
 
