--- a/src/styles/compounds/_result-card.scss
+++ b/src/styles/compounds/_result-card.scss
@@ -1,21 +1,19 @@
 .result-card {
-    picture {
-      padding-top: percentage(214 / 300);
+    img {
       border-radius: $badge-border-radius $badge-border-radius 0 0;
     }
 
     svg {
       fill: rgba(var(--bs-primary-rgb), var(--bs-text-opacity)) !important;
     }
-  
+
     &.carousel-item {
       & > div {
         min-height: calc-em(430);
       }
     }
-  
+
     a {
       text-decoration: underline;
     }
   }
-  
