task/sections-860pzgk5g

--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -23,3 +23,6 @@
 @import 'sections/header';
 @import 'sections/footer';
 @import 'sections/sidebar';
+@import 'sections/testimonials-carousel';
+@import 'sections/testimonial';
+@import 'sections/howto';
