--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -21,5 +21,6 @@
 @import 'compounds/search-box';
 
 @import 'sections/header';
+@import 'sections/cart-drawer';
 @import 'sections/footer';
 @import 'sections/sidebar';
