Sections/Templates to React

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,6 +10,8 @@
 @import 'components/video-loop';
 @import 'components/video-loop-gif';
 @import 'components/video-card';
+@import 'components/social-icons';
+@import 'components/article-proggress-bar';
 
 @import 'compounds/post-card';
 @import 'compounds/image-with-text';
