--- a/src/styles/templates/_blog.scss
+++ b/src/styles/templates/_blog.scss
@@ -1,6 +1,6 @@
 .blog-grid {
 	@include media-breakpoint-up(lg) {
-		display: grid;
+		display: grid !important;
 		grid-template-columns: 1fr 1fr 1fr;
 		grid-template-rows: auto auto auto;
 		grid-template-areas: "post1 post1 search"
@@ -47,7 +47,7 @@
 
 .blog-post-grid {
 	@include media-breakpoint-up(lg) {
-		display: grid;
+		display: grid !important;
 		grid-template-columns: 2fr 1fr;
 		grid-template-rows: auto auto;
 		grid-template-areas: "content sidebar"
