--- a/src/styles/core/_colors-vars.scss
+++ b/src/styles/core/_colors-vars.scss
@@ -15,6 +15,8 @@ $green-light: #00B67A;
 $yellow-light: #f9eeca;
 $pink-light: #FFF2F4;
 $pink-product: #FFF4F6;
+$suncare-blue: #E6F6FF;
+$suncare-orange: #E85862;
 
 $body-color: #151515;
 
@@ -36,7 +38,8 @@ $custom-theme-colors: (
   'pink-light': $pink-light,
   'primary-light': $primary-light,
   'bali-bod-blue': $bali-bod-blue,
-  'color': $white
+  'color': $white,
+  'orange': $suncare-orange,
 );
 
 $theme-colors: map-merge($theme-colors, $custom-theme-colors);
