--- a/src/styles/components/badge.scss
+++ b/src/styles/components/badge.scss
@@ -19,3 +19,9 @@
 	color: #fff;
 	background-color: $bali-bod-blue;
 }
+
+.badge-orange {
+	color: #fff;
+	background-color: $suncare-orange;
+}
+  
