--- a/src/styles/core/_colors-vars.scss
+++ b/src/styles/core/_colors-vars.scss
@@ -15,6 +15,8 @@ $green-light: #00B67A;
 $yellow-light: #f9eeca;
 $pink-light: #FFF2F4;
 $pink-product: #FFF4F6;
+$suncare-blue: #E6F6FF;
+$suncare-orange: #E85862;
 
 $body-color: #151515;
 
