--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -19,6 +19,8 @@
 @import 'compounds/product-banner';
 @import 'compounds/product-variant';
 @import 'compounds/product-card';
+@import 'compounds/product-card-abtest';
+@import 'compounds/product-card-cta-abtest';
 @import 'compounds/result-card';
 @import 'compounds/upsell';
 @import 'compounds/birthday-popup';
@@ -31,3 +33,4 @@
 @import 'sections/instagram';
 
 @import 'templates/blog';
+@import 'templates/collection';
