--- a/src/styles/core/_colors-vars.scss
+++ b/src/styles/core/_colors-vars.scss
@@ -32,6 +32,7 @@ $border-color: $gray-600;
 $custom-theme-colors: (
   'primary': $primary,
   'secondary': $secondary,
+  'secondary-light': $secondary-light,
   'gray-400': $gray-400,
   'gray-600': $gray-600,
   'sh-purple': $sh-purple,
