--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,6 +12,7 @@
 @import 'components/video-card';
 @import 'components/social-icons';
 @import 'components/article-proggress-bar';
+@import 'components/badge';
 
 @import 'compounds/post-card';
 @import 'compounds/image-with-text';
