[How to] The color of icon should be same as design

--- a/src/styles/sections/_howto.scss
+++ b/src/styles/sections/_howto.scss
@@ -13,7 +13,7 @@
 
 	.carousel-control-prev,
 	.carousel-control-next {
-		width: 10%;
+		width: 10% !important;
 
 		@include media-breakpoint-up(lg) {
 			background-color: $primary-light-second;
