--- a/src/styles/sections/_playground.scss
+++ b/src/styles/sections/_playground.scss
@@ -4,6 +4,13 @@
       bottom: 0;
       right: 0;
     }
+
+    &__title {
+      font-size: calc-em(32);
+	    @include media-breakpoint-up(lg) {
+		    font-size: calc-em(42);
+	    }
+    }
   
     &__subtitle {
       @include font-size($font-size-sm);
