--- a/src/styles/components/_custom-forms.scss
+++ b/src/styles/components/_custom-forms.scss
@@ -117,8 +117,8 @@
   .custom-select {
     display: inline-block;
     width: 100%;
-    // height: 3.125rem;
-    // padding: .875em 2em 0.875em 1em;
+    height: 3.125rem;
+    padding: .875em 2em 0.875em 1em;
     font-size: 1em;
     font-weight: 400;
     line-height: 1.25;
