--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,6 +13,7 @@
 @import 'components/social-icons';
 @import 'components/article-proggress-bar';
 @import 'components/badge';
+@import 'components/list';
 
 @import 'compounds/post-card';
 @import 'compounds/image-with-text';
@@ -37,3 +38,4 @@
 @import 'templates/collection';
 @import 'templates/stockist';
 @import 'templates/sustainability';
+@import 'templates/sweepstakes';
