--- a/src/styles/components/_carousel.scss
+++ b/src/styles/components/_carousel.scss
@@ -325,6 +325,16 @@
 			}
 		}
 	}
+
+	&--packaging {
+		.carousel-inner {
+			transform: translateX(-75%);
+
+			@include media-breakpoint-up(lg) {
+				transform: translateX(0);
+			}
+		}
+	}
 }
 
 .carousel-indicators {
