--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -39,3 +39,4 @@
 @import 'templates/stockist';
 @import 'templates/sustainability';
 @import 'templates/sweepstakes';
+@import 'templates/our-story';
