--- a/src/styles/components/_custom-forms.scss
+++ b/src/styles/components/_custom-forms.scss
@@ -149,3 +149,14 @@
     min-height: 1.25em;
     padding-left: 1.75em;
   }
+
+  .custom-control-label::after {
+    position: absolute;
+    top: 0em;
+    left: -1.75em;
+    display: block;
+    width: 1.25em;
+    height: 1.25em;
+    content: "";
+    background: 50% / 50% 50% no-repeat;
+  }
