--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,6 +14,7 @@
 @import 'components/article-proggress-bar';
 @import 'components/badge';
 @import 'components/list';
+@import 'components/product-subscription';
 
 @import 'compounds/post-card';
 @import 'compounds/image-with-text';
@@ -30,12 +31,15 @@
 @import 'compounds/newsletter-popup';
 @import 'compounds/sweepstakes-popup';
 @import 'compounds/cookies-popup';
+@import 'compounds/pdp-upsell';
 
 @import 'sections/playground';
 @import 'sections/instagram';
+@import 'sections/yotpo-widget';
 
 @import 'templates/blog';
 @import 'templates/collection';
 @import 'templates/stockist';
 @import 'templates/sustainability';
 @import 'templates/sweepstakes';
+@import 'templates/product';
