Added product SCSS

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -43,3 +43,4 @@
 @import 'templates/sustainability';
 @import 'templates/sweepstakes';
 @import 'templates/our-story';
+@import 'templates/product';
