--- a/src/styles/components/_tabs.scss
+++ b/src/styles/components/_tabs.scss
@@ -50,5 +50,23 @@
             width: calc-em(90);
         }
     }
+
+    &--real-results-page {
+        .nav-item {
+            &:first-child {
+                .nav-link {
+                    border-radius: 0;
+                    border: none;
+                    pointer-events: none;
+                }
+            }
+
+            &:nth-child(2) {
+                .nav-link {
+                    border-radius: $nav-tabs-border-radius 0 0 $nav-tabs-border-radius;;
+                }
+            }
+        }
+    }
 }
   
