--- a/src/styles/compounds/_product-card-abtest.scss
+++ b/src/styles/compounds/_product-card-abtest.scss
@@ -28,6 +28,9 @@
             border-right: 1px solid white;
             padding-top: $btn-padding-y-lg;
             padding-bottom: $btn-padding-y-lg;
+            .text-linethrough {
+                margin-right: map-get($spacers, 1) / 2;
+            }
         }
 
         &__text {
