--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -37,6 +37,7 @@
 @import 'sections/instagram';
 @import 'sections/yotpo-widget';
 
+@import 'templates/article';
 @import 'templates/blog';
 @import 'templates/collection';
 @import 'templates/stockist';
