update sustain page

--- a/src/styles/components/_carousel.scss
+++ b/src/styles/components/_carousel.scss
@@ -574,7 +574,7 @@
 			top: calc-em(130);
 		}
 	}
-
+	/*
 	.carousel-inner {
 		@include media-breakpoint-up(lg) {
 			transform: translateX(-75%);
@@ -609,6 +609,7 @@
 			display: none;
 		}
 	}
+	*/
 }
 
 .blog-carousel {
