article page fixes

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -22,6 +22,7 @@
 @import 'compounds/product-banner';
 @import 'compounds/product-variant';
 @import 'compounds/product-card';
+@import 'compounds/shop-article';
 @import 'compounds/product-card-abtest';
 @import 'compounds/product-card-cta-abtest';
 @import 'compounds/result-card';
